--- a/taskfile.yaml
+++ b/taskfile.yaml
@@ -7,4 +7,7 @@ tasks:
 
   update:
     cmds:
-      - git add -A . && git commit -m "update" && git push
+      - git rebase || true
+      - git add -A . || true
+      - git commit -m "update" || true
+      - git push || true
